added new question

--- a/Sorular/BMS-2015.md
+++ b/Sorular/BMS-2015.md
@@ -576,3 +576,473 @@ D. İlk 3 oktet donanımı üreten firmayı işaret eder.<br>
 ---------
 ## 2. Grub sorular (Emre Hoca)
 -------
+Soru 1. Gömülü sistem nedir?
+
+a)	Mikrobilgisayarlardır.
+b)	Bir sistem içerisinde yer alarak o sistemi akıllı hale getiren, tek amaca yönelik çalışan donanım ve yazılım ile bütünleşik sistemlerdir.
+c)	Yeniden programlanabilir ve geliştirilebilir, kaynakları sınırsız olan entegre sistemlerdir.
+d)	Çok amaçlı çalışabilen ve birden fazla fonksiyonu olan, bulunduğu sistemi akıllı hale getiren sitemlerdir.
+
+Soru 2. Aşağıdakilerden hangisi gömülü bir işletim sistemi değildir?
+
+a)	Windows 10
+b)	Windows XP Embedded
+c)	Mobilinux
+d)	Android
+
+Soru 3. Gömülü sistemlerden kullanıcı arayüzü kullanılmamasının en önemli sebebi nedir?
+
+a)	Minimum kullanıcı eylemi
+b)	Minimum çıktı ve girdi sayısı
+c)	Devrenin karmaşıklığını azaltma
+d)	Devrenin maliyetini azaltma
+Soru 1.Aşağıdakilerden hangisi bilgisayar grafikleri alt alanlarından biridir?
+a) Gerçek zamanlı 3 boyutlu canlandırma
+b)Vektörel grafikler
+c)Görsel tasarım
+d)Çizim algoritmaları
+e)3D ses
+
+Soru 2. Anti-Aliasing hangi çizim algoritmasında kullanılmıştır?
+a)Bresenham çizim algoritması
+b) Digital Differential Analyzer(DDA)
+c)Xiaolin Wu çizim algoritması
+d)Windows çizim algoritması
+e)Eğri çizim algoritması
+
+Soru 3. Aşağıdakilerden hangisi directx'e ait değildir.
+a)Direct3D
+b)DirectSound
+c)DirectInput
+d)DirectPlay
+e)Direct2D
+
+1.aşağıdakilerden hangisi otomasyonun özelliklerinden değildir?
+a)verimlilik artar
+b)hammade israfı azalır
+c)iş kazaları önlenir
+d)yatırım maliyeti düşüktür
+e)kalite düzeyi yükselir
+
+2.Birçok sayısal denetimli tezgah doğrudan bir tek bilgisayara bağlanan denetim sistemi hangisidir?
+a)sayısal denetim(NC)
+b)doğrudan sayısal denetim(DNC)
+c)bilgisayarlı sayısal denetim(CNC)
+d)adaptif denetim(AC)
+e)esnek imalat sistemi(FMS)
+
+3.aşağıdakilerden hangisi otomasyonu tetikleyen faktörlerden değildir?
+a)rekabetin artmasıyla teknolojinin zorunluluk olması
+b)Yığın üretimi gerektiren çeşitli tip ürünlere aşırı bir yönelmenin olması
+c)istihdam ihtiyacı
+d)üretim sistemlerinin değişmelere çabuk ayak uydurabilmesini gerektirmesi
+e)Ürünlerin karmaşıklığının artması
+1)POST nedir ?
+A)Bios'un Kendini güncellemesi
+B)Bilgisayarın açılırken kendi donanım bileşenlerini test etmesi
+C)Bios'un Bilgisayarı biçimlendirmesi
+D)Bios ayarlarının depolanması
+2)Bios  Aşagıdakilerden Hangisini Yapamaz ?
+A)Başlangıç Sürücüsünü Ayarlar
+B)Başlangıç Ayarlamalarını Yapar
+C)Parça Voltajlarını Ayarlar
+D)Ekran çözünürlüğünü Ayarlar
+3) BIOS setup ekranına nasıl girilebilir ?
+A)Başlangıcta esc veya herhangi bir F Fonksyonu kullanarak
+B)Bilgisayarı kapatmadan “Bios ile yeniden başlat” seçeneğine tıklayarak
+C)Bilgisayar açılırken Power tuşuna 3 kere basarak
+D)Komut satırına /Bios yazarak
+1.	Görüntüde satır ve sütunların kesiştiği bölgede bulunan, tüm sayısal görüntülerin en küçük parçası olan üçlü nokta grubu nedir?
+A) Histogram
+B) Piksel
+C) Frame
+D) Gürültü
+E) Parlaklık
+2.	Aşağıdakilerden hangisi görüntü işleme yazılımı değildir?
+A) ArtWeaver
+B) PhotoScape
+C) Skype
+D) Adobe Photoshop
+E) GIMP
+3.	Aşağıdaki yöntemlerden hangisiyle görüntü yakalama işlemi yapamayız?
+A) Print Screen tuşuna basarak
+B) Tarayıcıyla dosya taratarak
+C) Kamerayla fotoğraf çekerek
+D) Yazıcıdan çıktı alarak
+E) Programlar aracılığıyla filmlerden kesit alarak
+Soru 1) Aşağıdakilerden hangisi bir yazıcı türü değildir?
+a)Nokta Vuruşlu
+b)Püskürtmeli
+c)Lazer
+d)3d
+e)Sivri Uçlu
+
+Soru 2) Aşağıdakilerden hangisi son teknolojinin kullanıldığı yazıcı çeşididir?
+a)Lazer
+b)Püskürmeli
+c)3d
+d)Nokta Vuruşlu
+e)Termal
+
+Soru 3)  Aşağıdakilerden hangisi bir yazıcının kalitesini belirleyen bir unsur değildir?
+a)Baskı hızı
+b)Baskı kalitesi
+c)Sessiz olması
+d)Baskı şekli
+e)Dış görünüşü
+Soru 1) Aşağıdaki paralel programlama kütüphanelerinde hangisi daha yaygın kullanılır?
+A-) MPI
+B-) OpenMPI
+C-) Co-Array Fortran
+D-)Global Arrays
+E-)Böl ve Yönet
+
+Soru 	2)	Paralel proglama ile ilgili aşağıdakilerden hangisi yanlıştır?
+A-)Problemin çözümünde birden çok işlemci kullanılır.
+B-)Problem eşzamanlı çözülmek için farklı parçalara bölünür.
+C-)Her parça farklı komut serilerine bölünür.
+D-)Komutlar aynı anda farklı işlemciler üzerinde işlenir.
+E-)Paralel programlama günümüzde önemini yitirmiştir ve yerini seri programlamaya bırakmıştır.
+
+Soru 	3)	 Paralel programlama konsept ve termolojisinde bulunan tek işlem, çoklu data ‘yla ilgili hangileri yanlıştır?
+	I-) Seri bilgisayar çeşididir.
+	II-) Birden çok veri akışı kullanılır.
+	III-) Senkronizedir.
+	IV-)Birim zamanda birden çok işlem yapılır.
+A-) Yalnız I
+B-)I ve II
+C-) I, II ve IV
+D-) I ve IV
+E-) II ve III
+Soru 1)  Tarihteki ilk bilgisayar hangisidir?
+A)	Univac
+B)	RCA Spectra 70
+C)	IBM 360
+D)	Eniac
+E)	Mark-1
+Soru 2) Analitik makinenin mucidi kimdir?
+A)	Herman Hollerith
+B)	John Atanasoff
+C)	Charles Babbage
+D)	Clifford Berry
+E)	Presper Eckert
+Soru 3) Ticari olarak kullanılabilen ilk sayısal bilgisayar hangisidir?
+A)	Eniac
+B)	ABC Computer
+C)	Mark-1
+D)	Kenbak-1
+E)	Univac
+1.Tarihte akıllı kart ilk olarak hangi sektörde kullanılmıştır?
+A)Toplu Taşıma
+B)Eğitimde Sektöründe
+C)Bankalarda
+D)Sağlık Sektöründe
+E)Telefon
+
+2. Aşağıdakilerden hangisi kart üzerinde yer alan uygulama yazılımı veya üzerinde saklı bulunan bilgilere fiziksel veya mantıksal saldırılar ile erişilmesini engelleyen  donanımdır?
+
+A) CPU
+B) Rom(flash  EEPROM)
+C) Internal-Bus
+D) Dedicated hw security
+E) Co-Processor
+
+3.Aşağıdakilerden hangisi kart üzerindeki işletim sisteminin görevlerinden biri değildir?
+A)Birden fazla uygulama kontrol etmek
+B)Veri erişimin korunması
+C)Bellek yönetimi
+D)Şifreleme algoritmaların yönetimi ve çalıştırılması
+E)Kartı fiziksel darbelere karşı korumak
+Soru 1) Aşağıdakilerden hangisi yapay sinir hücresinin bölümlerinden değildir?
+A)Girdiler
+B)Ağırlıklar
+C)Hücre damarı
+D)Toplama fonksiyonu
+E)Çıktılar
+
+Soru 2) Aşağıdakilerden hangisi yapay sinir ağlarının kullanım alanlarından değildir?
+A)Elektronik
+B)Bankacılık
+C)Sağlık
+D)Spor
+E)Otomotiv
+
+Soru 3) Aşağıdakilerden hangisi yapay sinir ağlarının avantajları arasındadır?
+A)Donanımın bağımlı olması
+B)Ağ yapısının belirlenmesinde belirli bir kural olmaması
+C)Ağın davranışlarının açıklanamaması
+D)Her problem için farklı yaklaşımlar üretmesi
+E)Bir çok hücrenin eş zamanlı olarak çalışabilmesi
+Soru 1)Monitörün yüksekte veya alçakta olması en çok hangi bölgemizi olumsuz etkiler  ?
+a) Boyun   b) Bilek   c) Bacak   d) Sırt  e) Göz
+
+
+
+
+Soru 2)Aşağıdakilerden hangisi, bilgisayardan  yayılan  manyetik alanın, neden olduğu uzun vadedeki etkilerinden biri  değildir ?
+a) Genetik yapının bozulması
+b) Beyin tümörü
+c) Yorgunluk hissi
+d) Kalp rahatsızlıkları
+e) Kalıcı işitme bozuklukları
+
+Soru 3)Aşağıdakilerden hangisi iyi bir çalışma ortamı için dikkat edilmesi gereken özelliklerden biri değildir ?
+a) Klavyeyi yerleştirme
+b) Ekran
+c) Koltuk
+d) Havalandırma
+e) Loş ışık
+1-Aşağıdakilerden hangisi banka bilgilerini çalan Truva atı türüdür?
+A) Banker
+B) Game Thief
+C) Downloader
+D) IM
+E) Ransom
+2-Aşağıdakilerden hangisi casus yazılım türlerinden değildir?
+A)Stealware
+B) Browser Hijacking
+C) Adware
+D) Keylogger
+E) Exploit
+3-Aşağıda verilen kötü amaçlı yazılım türlerinden hangisi sistemdeki parayı veya veriyi çalmak amacıyla yazılmıştır?
+A) Exploit
+B) Stealware
+C) Rootkit
+D) Adware
+E) DOS virüsü
+ 1-Aşağıdakilerden hangisi robotun tanımında geçen özelliklerden biri değildir?
+a)Yazılım aracılığı ile yönetilir.
+b)Yararlı amaç için iş ve değer üretir.
+c)Bilgisayar algoritmaları ile yönetilir.
+D)Karada çalışmaya programlı makinelerdir.
+e)Mekanik sistemler ve bunlarla ilişkili kontrol ve algılama sistemleri bulunur.
+
+ 2-Aşağıdaki mühendislik dallarından hangisi robotik ile ilgilenmez?
+a)Uzay Mühendisliği
+B)İmalat Mühendisliği
+c)Mekatronik Mühendisliği
+d)Makine Mühendisliği
+e)Yazılım Mühendisliği
+
+ 3-Robotik hangi amaçlarda kullanılmaz?
+a)Ameliyatlarda
+b)Hobi
+c)İşlemci yapımında
+d)Bomba imha etmek
+E)Çevre düzenleme
+Soru 1)1960’lı yılların sonlarında Hawaii universitesinin kurduğu ağın(Ilk kurulan ağ),günümüze kadar gelen en önemli özelligi nedir?
+
+A)TCP/IP teknigi
+B)CSMA/CD teknigi
+C)Kablosuz olması
+D)Bus topolojisi
+
+Soru 2)Aşağıdakilerden hangisi Ağ yapılarından biri değildir?
+
+A)Halka
+B)Örgü
+C)Yayın ağları
+D)Halka topolojisi
+
+Soru 3)İnternet haberleşmesinde hangi protokol kullanılır?
+
+A)TCP/IP
+B)CSMA/CD
+C)CSMA/CA
+D)HTTP
+
+1)	Aşağıdakilerden hangisi İnternet Arama Motorlarının çalışma yöntemlerinden biridir?
+  	A) Örümcekler ile çalışan arama motorları
+  	B) İnsan iletileriyle çalışan arama motorları
+  	C) Meta arama motorları
+  	D) Hepsi
+
+2) 	Aşağıdakilerden hangisi bir internet arama motoru değildir?
+A)Google
+B)Yahoo
+C)Facebook
+D)Hakia
+
+
+3)	Aşağıdakilerden hangisi  internet arama motorlarının avantajları arasında yer almaz?
+A) Kompleks ve soyut anahtar kelimelerle aramak çok uygundur
+B) Arama motoru internet üzerinde kullanıcı kontrolü sağlar
+C) Arama motorları zaman kaybına yol açar
+D) Aramaları belli alan, zaman ve bilgi kaynağı ile sınırlandırır
+
+1)Aşağıdakilerden hangisi Windows işletim sisteminin genel özellikleri arasındadır?
+ A)Görsel bir işletim sistemi olması
+ B)Grafik tabanlı bir işletim sistemi olması
+ C)Herhangi bir işlemin birden çok yöntemle yapılması
+ D)Multitasking
+ E)Hepsi
+
+
+2)Pardus işletim sistemiyle ilgili verilenlerden hangisi yanlıştır?
+A)Ücretsizdir.
+B)Anadolu panteri anlamına gelir.
+C)Tasarı halindedir henüz kullanıma sunulmamıştır.
+D)TUBITAK tarafından geliştirilmiştir.
+E)GNU/LUNIX dağıtımıdır.
+
+
+
+
+3)Aşağıdakilerden hangisi işletim sisteminin temel görevleri arasında yer almaz?
+ A) Açılış testleri ve ayarlamalar,
+B) Komut yorumlama ve yerine getirme
+C) Bellek ve çevre araçların yönetimi
+D)Disk ve dosya işlemleri,
+E)Sunum hazırlama
+
+1-Aşağıdakilerden hangisi yüksek seviyeli dillerden biridir?
+A.Pascal
+B.C++
+        C.C#
+        D.Paradox
+        E.Visual Basic
+
+2-Programlama dilleri çalıştıkları ortama göre kaça ayrılır?
+A.1
+B.2
+C.3
+D.4
+E.5
+3-Aşağıdakilerden hangisi nesneye yönelimli diller biridir?
+A.Java
+B.ADA
+C.Fortran
+D.Acces
+E.Visual Basic
+
+•	Bulut Hizmetleri
+•	Bulut Platformu
+•	Bulut Alt  Yapısı
+Soru 1.  
+Yukarıdaki bulut katmanlarından hangisinde veya hangilerinde Sanal Kaynaklar kullanılır?
+•	Yalnız I
+•	Yalnız II
+•	Yalnız III
+•	I ve II
+•	I ve III
+Soru 2.
+Aşağıdakilerden hangisi Bulut Bilişimin avantajlarından biri değildir?
+•	Hızlı internet bağlantısı gerektirmesi.
+•	Veri kaybını engellemesi.
+•	Hızlı güncelleme sağlaması.
+•	Yüksek depolama kapasitesine sahip olması.
+•	Düşük donanım maliyeti sağlaması.
+Soru 3.
+Aşağıdakilerden hangisi Bulut Bilişime gelinen süreçte kullanılan teknolojilerden biri değildir?
+•	Utility Computing
+•	Grid Computing
+•	Cluster Computing
+•	Super Computing
+•	Green Computing
+Soru 4.
+Aşağıdakilerden hangisi Bulut Bilişimin dezavantajlarından biri değildir?
+•	İnternet bağlantısı gerektirmesi.
+•	Sunucu Yoğunluğu.
+•	Ağır sistem güncellemeleri.
+•	Güvenlik açıkları.
+•	Veri kaybını engelleme.
+
+1)Aşağıdakilerden hangisi barkod türü tarayıcı değildir?
+    A)Kalem tarayıcı
+    B)Kamera tabanlı okuyucu
+    C)CCD Tarayıcı
+    D)Sheet-fed tarayıcı  
+    E)Handheld tarayıcı
+  2)aşağıdaki tarayıcılardan hangisi photomultiplier tube teknolojisine sahiptir?
+   A)Handheld tarayıcı
+   B)Sheet-fed tarayıcı
+   C)Drum tarayıcı
+   D)Flatbed tarayıcı
+   E)SCSI tarayıcı
+3)CCD barkod tarayıcının kalem türü ve lazer barkod tarayıcılardan farkı nedir?
+A)Barkod etiketinden yansıyan ışığın parlaklığını ölçmesi
+B)Foto diyot bulundurması
+C)Işık kaynağından yansıyan ışığın şiddetini ölçmesi
+D)Lazerin geri yansımasını sağlayacak bir ayna düzeneğini bulundurması
+E)Tarayıcı tarafından üretilen belirli frekanstaki ışığı ölçmesi
+
+Soru 1)Modülasyon Nedir?
+A) Veri gönderen modem, sayısal veriyi telefon hattıyla uyumlu analog sinyallere dönüştürür, bu isleme modülasyon denir.
+B) Veri alan modem ise analog işaretleri tekrardan sayısal veriye çevirir bu işleme de modülasyon denir.
+C) MAFE devreleri içinde DAC (Digital analog çevirici) sistemlere denir.
+D) MAFE devreleri içinde ADC (Analog dijital çevirici) sistemlere denir.
+E) Mikro denetleyici birimidir
+Soru 2) Modemin temel bileşeni değildir?
+A)Dial-up
+B)UART
+C)DAC
+D)ADC
+E)DSP
+Soru 3) Full Duplex in özelliklerindendir?
+A)Modemler veri iletimini her iki yöne aynı anda yapabileceği anlamına gelir
+B)Veri iletişimi esnasında bir modem gönderir diğer modem alır. Aynı anda veri iletişimi yapılmaz.
+C) Aynı anda hem veri iıetişimi hem de karşı tarafla konuşma yapılabilir.
+D)Mikrofon firması tarafında geliştirilmiş hata kontrol protokolü Harici modemler Harici güç ünitesinden beslenirler
+E)Telefonlar bu iletişim üzerinden çalışmaz.
+
+
+Soru 1) Aşağıdakilerin hangisi güvenlik duvarlarının (Firewall) kullandığı metodlardan biridir?
+A)Paket Filtrelemesi
+B)Sezgisel Tarama
+C)Telnet
+D)Pishing
+E)P2P
+Soru 2) Aşağıdakilerden hangisi güvenlik duvarlarının (Firewall) filtreleme kurallarından biri değildir?
+A)Ip Adresleri
+B)Alan Adları
+C)Portlar
+D)Yerel Alan Ağı
+E)Protokoller
+
+Soru 3) Aşağıdakilerden hangisi virüslere karşı alınabilecek önlemlerden biri değildir?
+A)Sanal makine kullanmak
+B)Açılır pencere engelleyicisi kullanmak
+C)Sürücülerdeki otomatik çalıştırma özelliğini açmak
+D)Şüpheli web sitelerini ziyaret etmemek
+E)Güvensiz e-postaları açmamak
+
+Soru 1) 1943 yılında Enigmanın ürettiği şifreleri çözmek için hangi makine icat edilmiştir?
+a)   Jefferson Diski
+b)  Eniac
+c)   Hill
+d)  Vernam
+e)   Sezar
+
+Soru 2) Belgelerin şifrelenmesi ve şifresinin çözülmesi için kullanılan yöntemlere ne ad verilir?
+a)   Kriptoloji
+b)   Kriptoanaliz
+c)   Kriptografi
+d)   PKI
+e)   Stenografi
+
+Soru 3) Açık anahtar kriptografik sistemi ve sayısal imzalama yöntemi olarak kullanılan,  Çarpanlarına ayırma problemi üzerine inşa edilen algoritma aşağıdakilerden hangisidir?
+a)	Diffie-Hellman
+b)	RSA
+c)	DES
+d)	RC2
+e)	Eliptik Eğri
+
+1)Aşağıdakilerden hangisi bir oyun konsulu değildir?
+A-) Magnavox Odyssey
+B-) Sega Mega Drive
+C-)Playstation 2
+D-)XBOX 360
+E-)IPAD
+
+2)Aşağıdakilerden hangisi bir sanal gerçeklik gözlüğüdür?
+A-)Oculus Rift
+B-)Ray-Ban
+C-)Sony vaio
+D-)Sega Dreamcast
+E-)Microsoft Kinect
+3)Aşağıdakilerden hangisi First Person Shooter oyunudur?
+A-)FİFA
+B-)Call of Duty
+C-)League Of Legends
+D-)Mortal Kombat
+E-)Game Of Thrones
