--- a/Sorular/BMS-2015.md
+++ b/Sorular/BMS-2015.md
@@ -1,4 +1,4 @@
-
+﻿
 ####1-	İlk öğretim öğrencilerinin aritmetiği ve matematiği öğrendiği aletin adı nedir?
 
  **A) Abaküs**<br>
@@ -575,474 +575,513 @@ D. İlk 3 oktet donanımı üreten firmayı işaret eder.<br>
 
 ---------
 ## 2. Grub sorular (Emre Hoca)
--------
-Soru 1. Gömülü sistem nedir?
 
-a)	Mikrobilgisayarlardır.
-b)	Bir sistem içerisinde yer alarak o sistemi akıllı hale getiren, tek amaca yönelik çalışan donanım ve yazılım ile bütünleşik sistemlerdir.
-c)	Yeniden programlanabilir ve geliştirilebilir, kaynakları sınırsız olan entegre sistemlerdir.
-d)	Çok amaçlı çalışabilen ve birden fazla fonksiyonu olan, bulunduğu sistemi akıllı hale getiren sitemlerdir.
 
-Soru 2. Aşağıdakilerden hangisi gömülü bir işletim sistemi değildir?
+#### 1. Gömülü sistem nedir?
 
-a)	Windows 10
-b)	Windows XP Embedded
-c)	Mobilinux
-d)	Android
+a)	Mikrobilgisayarlardır.<br>
+**b)	Bir sistem içerisinde yer alarak o sistemi akıllı hale getiren, tek amaca yönelik çalışan donanım ve yazılım ile bütünleşik sistemlerdir.**<br>
+c)	Yeniden programlanabilir ve geliştirilebilir, kaynakları sınırsız olan entegre sistemlerdir.<br>
+d)	Çok amaçlı çalışabilen ve birden fazla fonksiyonu olan, bulunduğu sistemi akıllı hale getiren sitemlerdir.<br>
 
-Soru 3. Gömülü sistemlerden kullanıcı arayüzü kullanılmamasının en önemli sebebi nedir?
+#### 2. Aşağıdakilerden hangisi gömülü bir işletim sistemi değildir?
 
-a)	Minimum kullanıcı eylemi
-b)	Minimum çıktı ve girdi sayısı
-c)	Devrenin karmaşıklığını azaltma
-d)	Devrenin maliyetini azaltma
-Soru 1.Aşağıdakilerden hangisi bilgisayar grafikleri alt alanlarından biridir?
-a) Gerçek zamanlı 3 boyutlu canlandırma
-b)Vektörel grafikler
-c)Görsel tasarım
-d)Çizim algoritmaları
-e)3D ses
+**a)	Windows 10**<br>
+b)	Windows XP Embedded<br>
+c)	Mobilinux<br>
+d)	Android<br>
 
-Soru 2. Anti-Aliasing hangi çizim algoritmasında kullanılmıştır?
-a)Bresenham çizim algoritması
-b) Digital Differential Analyzer(DDA)
-c)Xiaolin Wu çizim algoritması
-d)Windows çizim algoritması
-e)Eğri çizim algoritması
+#### 3. Gömülü sistemlerden kullanıcı arayüzü kullanılmamasının en önemli sebebi nedir?
 
-Soru 3. Aşağıdakilerden hangisi directx'e ait değildir.
-a)Direct3D
-b)DirectSound
-c)DirectInput
-d)DirectPlay
-e)Direct2D
+a)	Minimum kullanıcı eylemi<br>
+b)	Minimum çıktı ve girdi sayısı<br>
+c)	Devrenin karmaşıklığını azaltma<br>
+**d)	Devrenin maliyetini azaltma**<br>
 
-1.aşağıdakilerden hangisi otomasyonun özelliklerinden değildir?
-a)verimlilik artar
-b)hammade israfı azalır
-c)iş kazaları önlenir
-d)yatırım maliyeti düşüktür
-e)kalite düzeyi yükselir
+#### 4. Aşağıdakilerden hangisi bilgisayar grafikleri alt alanlarından biridir?
 
-2.Birçok sayısal denetimli tezgah doğrudan bir tek bilgisayara bağlanan denetim sistemi hangisidir?
-a)sayısal denetim(NC)
-b)doğrudan sayısal denetim(DNC)
-c)bilgisayarlı sayısal denetim(CNC)
-d)adaptif denetim(AC)
-e)esnek imalat sistemi(FMS)
+**a) Gerçek zamanlı 3 boyutlu canlandırma**<br>
+b)Vektörel grafikler<br>
+c)Görsel tasarım<br>
+d)Çizim algoritmaları<br>
+e)3D ses<br>
 
-3.aşağıdakilerden hangisi otomasyonu tetikleyen faktörlerden değildir?
-a)rekabetin artmasıyla teknolojinin zorunluluk olması
-b)Yığın üretimi gerektiren çeşitli tip ürünlere aşırı bir yönelmenin olması
-c)istihdam ihtiyacı
-d)üretim sistemlerinin değişmelere çabuk ayak uydurabilmesini gerektirmesi
-e)Ürünlerin karmaşıklığının artması
-1)POST nedir ?
-A)Bios'un Kendini güncellemesi
-B)Bilgisayarın açılırken kendi donanım bileşenlerini test etmesi
-C)Bios'un Bilgisayarı biçimlendirmesi
-D)Bios ayarlarının depolanması
-2)Bios  Aşagıdakilerden Hangisini Yapamaz ?
+
+#### 5. Anti-Aliasing hangi çizim algoritmasında kullanılmıştır?
+a)Bresenham çizim algoritması<br>
+b) Digital Differential Analyzer(DDA)<br>
+**c)Xiaolin Wu çizim algoritması**<br>
+d)Windows çizim algoritması<br>
+e)Eğri çizim algoritması<br>
+
+#### 6. Aşağıdakilerden hangisi directx'e ait değildir.
+a)Direct3D<br>
+b)DirectSound<br>
+c)DirectInput<br>
+d)DirectPlay<br>
+**e)Direct2D**<br>
+
+#### 7.aşağıdakilerden hangisi otomasyonun özelliklerinden değildir?
+a)verimlilik artar<br>
+b)hammade israfı azalır<br>
+c)iş kazaları önlenir<br>
+**d)yatırım maliyeti düşüktür**<br>
+e)kalite düzeyi yükselir<br>
+
+#### 8.Birçok sayısal denetimli tezgah doğrudan bir tek bilgisayara bağlanan denetim sistemi hangisidir?
+a)sayısal denetim(NC)<br>
+**b)doğrudan sayısal denetim(DNC)**<br>
+c)bilgisayarlı sayısal denetim(CNC)<br>
+d)adaptif denetim(AC)<br>
+e)esnek imalat sistemi(FMS)<br>
+
+#### 9.aşağıdakilerden hangisi otomasyonu tetikleyen faktörlerden değildir?
+a)rekabetin artmasıyla teknolojinin zorunluluk olması<br>
+b)Yığın üretimi gerektiren çeşitli tip ürünlere aşırı bir yönelmenin olması<br>
+**c)istihdam ihtiyacı**<br>
+d)üretim sistemlerinin değişmelere çabuk ayak uydurabilmesini gerektirmesi<br>
+e)Ürünlerin karmaşıklığının artması<br>
+
+#### 10.POST nedir ?
+A)Bios'un Kendini güncellemesi<br>
+**B)Bilgisayarın açılırken kendi donanım bileşenlerini test etmesi**<br>
+C)Bios'un Bilgisayarı biçimlendirmesi<br>
+D)Bios ayarlarının depolanması<br>
+
+#### 11.Bios  Aşagıdakilerden Hangisini Yapamaz ?
 A)Başlangıç Sürücüsünü Ayarlar
-B)Başlangıç Ayarlamalarını Yapar
-C)Parça Voltajlarını Ayarlar
-D)Ekran çözünürlüğünü Ayarlar
-3) BIOS setup ekranına nasıl girilebilir ?
-A)Başlangıcta esc veya herhangi bir F Fonksyonu kullanarak
-B)Bilgisayarı kapatmadan “Bios ile yeniden başlat” seçeneğine tıklayarak
-C)Bilgisayar açılırken Power tuşuna 3 kere basarak
-D)Komut satırına /Bios yazarak
-1.	Görüntüde satır ve sütunların kesiştiği bölgede bulunan, tüm sayısal görüntülerin en küçük parçası olan üçlü nokta grubu nedir?
-A) Histogram
-B) Piksel
-C) Frame
-D) Gürültü
-E) Parlaklık
-2.	Aşağıdakilerden hangisi görüntü işleme yazılımı değildir?
-A) ArtWeaver
-B) PhotoScape
-C) Skype
-D) Adobe Photoshop
-E) GIMP
-3.	Aşağıdaki yöntemlerden hangisiyle görüntü yakalama işlemi yapamayız?
-A) Print Screen tuşuna basarak
-B) Tarayıcıyla dosya taratarak
-C) Kamerayla fotoğraf çekerek
-D) Yazıcıdan çıktı alarak
-E) Programlar aracılığıyla filmlerden kesit alarak
-Soru 1) Aşağıdakilerden hangisi bir yazıcı türü değildir?
-a)Nokta Vuruşlu
-b)Püskürtmeli
-c)Lazer
-d)3d
-e)Sivri Uçlu
+B)Başlangıç Ayarlamalarını Yapar<br>
+C)Parça Voltajlarını Ayarlar<br>
+**D)Ekran çözünürlüğünü Ayarlar**<br>
 
-Soru 2) Aşağıdakilerden hangisi son teknolojinin kullanıldığı yazıcı çeşididir?
-a)Lazer
-b)Püskürmeli
-c)3d
-d)Nokta Vuruşlu
-e)Termal
+#### 12. BIOS setup ekranına nasıl girilebilir ?
+**A)Başlangıcta esc veya herhangi bir F Fonksyonu kullanarak**<br>
+B)Bilgisayarı kapatmadan “Bios ile yeniden başlat” seçeneğine tıklayarak<br>
+C)Bilgisayar açılırken Power tuşuna 3 kere basarak<br>
+D)Komut satırına /Bios yazarak<br>
 
-Soru 3)  Aşağıdakilerden hangisi bir yazıcının kalitesini belirleyen bir unsur değildir?
-a)Baskı hızı
-b)Baskı kalitesi
-c)Sessiz olması
-d)Baskı şekli
-e)Dış görünüşü
-Soru 1) Aşağıdaki paralel programlama kütüphanelerinde hangisi daha yaygın kullanılır?
-A-) MPI
-B-) OpenMPI
-C-) Co-Array Fortran
-D-)Global Arrays
-E-)Böl ve Yönet
+#### 13.	Görüntüde satır ve sütunların kesiştiği bölgede bulunan, tüm sayısal görüntülerin en küçük parçası olan üçlü nokta grubu nedir?
+A) Histogram<br>
+**B) Piksel**<br>
+C) Frame<br>
+D) Gürültü<br>
+E) Parlaklık<br>
 
-Soru 	2)	Paralel proglama ile ilgili aşağıdakilerden hangisi yanlıştır?
-A-)Problemin çözümünde birden çok işlemci kullanılır.
-B-)Problem eşzamanlı çözülmek için farklı parçalara bölünür.
-C-)Her parça farklı komut serilerine bölünür.
-D-)Komutlar aynı anda farklı işlemciler üzerinde işlenir.
-E-)Paralel programlama günümüzde önemini yitirmiştir ve yerini seri programlamaya bırakmıştır.
+#### 14.Aşağıdakilerden hangisi görüntü işleme yazılımı değildir?
+A) ArtWeaver<br>
+B) PhotoScape<br>
+**C) Skype**<br>
+D) Adobe Photoshop<br>
+E) GIMP<br>
 
-Soru 	3)	 Paralel programlama konsept ve termolojisinde bulunan tek işlem, çoklu data ‘yla ilgili hangileri yanlıştır?
-	I-) Seri bilgisayar çeşididir.
-	II-) Birden çok veri akışı kullanılır.
-	III-) Senkronizedir.
-	IV-)Birim zamanda birden çok işlem yapılır.
-A-) Yalnız I
-B-)I ve II
-C-) I, II ve IV
-D-) I ve IV
-E-) II ve III
-Soru 1)  Tarihteki ilk bilgisayar hangisidir?
-A)	Univac
-B)	RCA Spectra 70
-C)	IBM 360
-D)	Eniac
-E)	Mark-1
-Soru 2) Analitik makinenin mucidi kimdir?
-A)	Herman Hollerith
-B)	John Atanasoff
-C)	Charles Babbage
-D)	Clifford Berry
-E)	Presper Eckert
-Soru 3) Ticari olarak kullanılabilen ilk sayısal bilgisayar hangisidir?
-A)	Eniac
-B)	ABC Computer
-C)	Mark-1
-D)	Kenbak-1
-E)	Univac
-1.Tarihte akıllı kart ilk olarak hangi sektörde kullanılmıştır?
-A)Toplu Taşıma
-B)Eğitimde Sektöründe
-C)Bankalarda
-D)Sağlık Sektöründe
-E)Telefon
+#### 15.	Aşağıdaki yöntemlerden hangisiyle görüntü yakalama işlemi yapamayız?
+A) Print Screen tuşuna basarak<br>
+B) Tarayıcıyla dosya taratarak<br>
+C) Kamerayla fotoğraf çekerek<br>
+**D) Yazıcıdan çıktı alarak**<br>
+E) Programlar aracılığıyla filmlerden kesit alarak<br>
 
-2. Aşağıdakilerden hangisi kart üzerinde yer alan uygulama yazılımı veya üzerinde saklı bulunan bilgilere fiziksel veya mantıksal saldırılar ile erişilmesini engelleyen  donanımdır?
-
-A) CPU
-B) Rom(flash  EEPROM)
-C) Internal-Bus
-D) Dedicated hw security
-E) Co-Processor
-
-3.Aşağıdakilerden hangisi kart üzerindeki işletim sisteminin görevlerinden biri değildir?
-A)Birden fazla uygulama kontrol etmek
-B)Veri erişimin korunması
-C)Bellek yönetimi
-D)Şifreleme algoritmaların yönetimi ve çalıştırılması
-E)Kartı fiziksel darbelere karşı korumak
-Soru 1) Aşağıdakilerden hangisi yapay sinir hücresinin bölümlerinden değildir?
-A)Girdiler
-B)Ağırlıklar
-C)Hücre damarı
-D)Toplama fonksiyonu
-E)Çıktılar
-
-Soru 2) Aşağıdakilerden hangisi yapay sinir ağlarının kullanım alanlarından değildir?
-A)Elektronik
-B)Bankacılık
-C)Sağlık
-D)Spor
-E)Otomotiv
-
-Soru 3) Aşağıdakilerden hangisi yapay sinir ağlarının avantajları arasındadır?
-A)Donanımın bağımlı olması
-B)Ağ yapısının belirlenmesinde belirli bir kural olmaması
-C)Ağın davranışlarının açıklanamaması
-D)Her problem için farklı yaklaşımlar üretmesi
-E)Bir çok hücrenin eş zamanlı olarak çalışabilmesi
-Soru 1)Monitörün yüksekte veya alçakta olması en çok hangi bölgemizi olumsuz etkiler  ?
-a) Boyun   b) Bilek   c) Bacak   d) Sırt  e) Göz
+#### 16. Aşağıdakilerden hangisi bir yazıcı türü değildir?
+a)Nokta Vuruşlu<br>
+b)Püskürtmeli<br>
+c)Lazer<br>
+d)3d<br>
+**e)Sivri Uçlu**<br>
 
 
+#### 17. Aşağıdakilerden hangisi son teknolojinin kullanıldığı yazıcı çeşididir?
+a)Lazer<br>
+b)Püskürmeli<br>
+**c)3d**<br>
+d)Nokta Vuruşlu<br>
+e)Termal<br>
 
 
-Soru 2)Aşağıdakilerden hangisi, bilgisayardan  yayılan  manyetik alanın, neden olduğu uzun vadedeki etkilerinden biri  değildir ?
-a) Genetik yapının bozulması
-b) Beyin tümörü
-c) Yorgunluk hissi
-d) Kalp rahatsızlıkları
-e) Kalıcı işitme bozuklukları
+#### 18.  Aşağıdakilerden hangisi bir yazıcının kalitesini belirleyen bir unsur değildir?
+a)Baskı hızı<br>
+b)Baskı kalitesi<br>
+c)Sessiz olması<br>
+d)Baskı şekli<br>
+**e)Dış görünüşü**<br>
 
-Soru 3)Aşağıdakilerden hangisi iyi bir çalışma ortamı için dikkat edilmesi gereken özelliklerden biri değildir ?
-a) Klavyeyi yerleştirme
-b) Ekran
-c) Koltuk
-d) Havalandırma
-e) Loş ışık
-1-Aşağıdakilerden hangisi banka bilgilerini çalan Truva atı türüdür?
-A) Banker
-B) Game Thief
-C) Downloader
-D) IM
-E) Ransom
-2-Aşağıdakilerden hangisi casus yazılım türlerinden değildir?
-A)Stealware
-B) Browser Hijacking
-C) Adware
-D) Keylogger
-E) Exploit
-3-Aşağıda verilen kötü amaçlı yazılım türlerinden hangisi sistemdeki parayı veya veriyi çalmak amacıyla yazılmıştır?
-A) Exploit
-B) Stealware
-C) Rootkit
-D) Adware
-E) DOS virüsü
- 1-Aşağıdakilerden hangisi robotun tanımında geçen özelliklerden biri değildir?
-a)Yazılım aracılığı ile yönetilir.
-b)Yararlı amaç için iş ve değer üretir.
-c)Bilgisayar algoritmaları ile yönetilir.
-D)Karada çalışmaya programlı makinelerdir.
-e)Mekanik sistemler ve bunlarla ilişkili kontrol ve algılama sistemleri bulunur.
-
- 2-Aşağıdaki mühendislik dallarından hangisi robotik ile ilgilenmez?
-a)Uzay Mühendisliği
-B)İmalat Mühendisliği
-c)Mekatronik Mühendisliği
-d)Makine Mühendisliği
-e)Yazılım Mühendisliği
-
- 3-Robotik hangi amaçlarda kullanılmaz?
-a)Ameliyatlarda
-b)Hobi
-c)İşlemci yapımında
-d)Bomba imha etmek
-E)Çevre düzenleme
-Soru 1)1960’lı yılların sonlarında Hawaii universitesinin kurduğu ağın(Ilk kurulan ağ),günümüze kadar gelen en önemli özelligi nedir?
-
-A)TCP/IP teknigi
-B)CSMA/CD teknigi
-C)Kablosuz olması
-D)Bus topolojisi
-
-Soru 2)Aşağıdakilerden hangisi Ağ yapılarından biri değildir?
-
-A)Halka
-B)Örgü
-C)Yayın ağları
-D)Halka topolojisi
-
-Soru 3)İnternet haberleşmesinde hangi protokol kullanılır?
-
-A)TCP/IP
-B)CSMA/CD
-C)CSMA/CA
-D)HTTP
-
-1)	Aşağıdakilerden hangisi İnternet Arama Motorlarının çalışma yöntemlerinden biridir?
-  	A) Örümcekler ile çalışan arama motorları
-  	B) İnsan iletileriyle çalışan arama motorları
-  	C) Meta arama motorları
-  	D) Hepsi
-
-2) 	Aşağıdakilerden hangisi bir internet arama motoru değildir?
-A)Google
-B)Yahoo
-C)Facebook
-D)Hakia
+#### 19. Aşağıdaki paralel programlama kütüphanelerinde hangisi daha yaygın kullanılır?
+**A-) MPI**<br>
+B-) OpenMPI<br>
+C-) Co-Array Fortran<br>
+D-)Global Arrays<br>
+E-)Böl ve Yönet<br>
 
 
-3)	Aşağıdakilerden hangisi  internet arama motorlarının avantajları arasında yer almaz?
-A) Kompleks ve soyut anahtar kelimelerle aramak çok uygundur
-B) Arama motoru internet üzerinde kullanıcı kontrolü sağlar
-C) Arama motorları zaman kaybına yol açar
-D) Aramaları belli alan, zaman ve bilgi kaynağı ile sınırlandırır
-
-1)Aşağıdakilerden hangisi Windows işletim sisteminin genel özellikleri arasındadır?
- A)Görsel bir işletim sistemi olması
- B)Grafik tabanlı bir işletim sistemi olması
- C)Herhangi bir işlemin birden çok yöntemle yapılması
- D)Multitasking
- E)Hepsi
+#### 	20.	Paralel proglama ile ilgili aşağıdakilerden *hangisi yanlıştır*?
+A-)Problemin çözümünde birden çok işlemci kullanılır.<br>
+B-)Problem eşzamanlı çözülmek için farklı parçalara bölünür.<br>
+C-)Her parça farklı komut serilerine bölünür.<br>
+D-)Komutlar aynı anda farklı işlemciler üzerinde işlenir.<br>
+**E-)Paralel programlama günümüzde önemini yitirmiştir ve yerini seri programlamaya bırakmıştır.**<br>
 
 
-2)Pardus işletim sistemiyle ilgili verilenlerden hangisi yanlıştır?
-A)Ücretsizdir.
-B)Anadolu panteri anlamına gelir.
-C)Tasarı halindedir henüz kullanıma sunulmamıştır.
-D)TUBITAK tarafından geliştirilmiştir.
-E)GNU/LUNIX dağıtımıdır.
+#### 21. Paralel programlama konsept ve termolojisinde bulunan tek işlem, çoklu data ‘yla ilgili hangileri yanlıştır?
+	I-) Seri bilgisayar çeşididir.<br>
+	II-) Birden çok veri akışı kullanılır.<br>
+	III-) Senkronizedir.<br>
+	IV-)Birim zamanda birden çok işlem yapılır.<br>
+A-) Yalnız I<br>
+B-)I ve II<br>
+C-) I, II ve IV<br>
+**D-) I ve IV**<br>
+E-) II ve III<br>
+
+#### 22. Tarihteki ilk bilgisayar hangisidir?
+A)	Univac<br>
+B)	RCA Spectra 70<br>
+C)	IBM 360<br>
+**D)	Eniac**<br>
+E)	Mark-1<br>
+
+#### 23. Analitik makinenin mucidi kimdir?
+A)	Herman Hollerith<br>
+B)	John Atanasoff<br>
+**C)	Charles Babbage**<br>
+D)	Clifford Berry<br>
+E)	Presper Eckert<br>
+
+#### 24. Ticari olarak kullanılabilen ilk sayısal bilgisayar hangisidir?
+A)	Eniac<br>
+B)	ABC Computer<br>
+C)	Mark-1<br>
+D)	Kenbak-1<br>
+**E)	Univac**<br>
+
+#### 25. Tarihte akıllı kart ilk olarak hangi sektörde kullanılmıştır?
+A)Toplu Taşıma<br>
+B)Eğitimde Sektöründe<br>
+**C)Bankalarda**<br>
+D)Sağlık Sektöründe<br>
+E)Telefon<br>
+
+#### 26. Aşağıdakilerden hangisi kart üzerinde yer alan uygulama yazılımı veya üzerinde saklı bulunan bilgilere fiziksel veya mantıksal saldırılar ile erişilmesini engelleyen  donanımdır?
+
+A) CPU<br>
+B) Rom(flash  EEPROM)<br>
+C) Internal-Bus<br>
+**D) Dedicated hw security**<br>
+E) Co-Processor<br>
+
+#### 27. Aşağıdakilerden hangisi kart üzerindeki işletim sisteminin görevlerinden biri değildir?
+A)Birden fazla uygulama kontrol etmek<br>
+B)Veri erişimin korunması<br>
+C)Bellek yönetimi<br>
+D)Şifreleme algoritmaların yönetimi ve çalıştırılması<br>
+**E)Kartı fiziksel darbelere karşı korumak**<br>
+
+#### 28. Aşağıdakilerden hangisi yapay sinir hücresinin bölümlerinden değildir?
+A)Girdiler<br>
+B)Ağırlıklar<br>
+**C)Hücre damarı**<br>
+D)Toplama fonksiyonu<br>
+E)Çıktılar<br>
 
 
+#### 29. Aşağıdakilerden hangisi yapay sinir ağlarının kullanım alanlarından değildir?
+A)Elektronik<br>
+B)Bankacılık<br>
+C)Sağlık<br>
+**D)Spor**<br>
+E)Otomotiv<br>
 
 
-3)Aşağıdakilerden hangisi işletim sisteminin temel görevleri arasında yer almaz?
- A) Açılış testleri ve ayarlamalar,
-B) Komut yorumlama ve yerine getirme
-C) Bellek ve çevre araçların yönetimi
-D)Disk ve dosya işlemleri,
-E)Sunum hazırlama
+#### 30. Aşağıdakilerden hangisi yapay sinir ağlarının avantajları arasındadır?
+A)Donanımın bağımlı olması<br>
+B)Ağ yapısının belirlenmesinde belirli bir kural olmaması<br>
+C)Ağın davranışlarının açıklanamaması<br>
+D)Her problem için farklı yaklaşımlar üretmesi<br>
+**E)Bir çok hücrenin eş zamanlı olarak çalışabilmesi**<br>
 
-1-Aşağıdakilerden hangisi yüksek seviyeli dillerden biridir?
-A.Pascal
-B.C++
-        C.C#
-        D.Paradox
-        E.Visual Basic
+#### 31. Monitörün yüksekte veya alçakta olması en çok hangi bölgemizi olumsuz etkiler  ?
+a) Boyun <br>  
+b) Bilek  <br>
+c) Bacak  <br>
+**d) Sırt**<br>
+e) Göz<br>
 
-2-Programlama dilleri çalıştıkları ortama göre kaça ayrılır?
-A.1
-B.2
-C.3
-D.4
-E.5
-3-Aşağıdakilerden hangisi nesneye yönelimli diller biridir?
-A.Java
-B.ADA
-C.Fortran
-D.Acces
-E.Visual Basic
+#### 32. Aşağıdakilerden hangisi, bilgisayardan  yayılan  manyetik alanın, neden olduğu uzun vadedeki etkilerinden biri  değildir ?
+a) Genetik yapının bozulması<br>
+b) Beyin tümörü<br>
+**c) Yorgunluk hissi**<br>
+d) Kalp rahatsızlıkları<br>
+e) Kalıcı işitme bozuklukları<br>
 
-•	Bulut Hizmetleri
-•	Bulut Platformu
-•	Bulut Alt  Yapısı
-Soru 1.  
+
+#### 33. Aşağıdakilerden hangisi iyi bir çalışma ortamı için dikkat edilmesi gereken özelliklerden biri değildir ?
+a) Klavyeyi yerleştirme<br>
+b) Ekran<br>
+c) Koltuk<br>
+d) Havalandırma<br>
+**e) Loş ışık**<br>
+
+#### 34. Aşağıdakilerden hangisi banka bilgilerini çalan Truva atı türüdür?
+**A) Banker**<br>
+B) Game Thief<br>
+C) Downloader<br>
+D) IM<br>
+E) Ransom<br>
+
+#### 35. Aşağıdakilerden hangisi casus yazılım türlerinden değildir?
+A)Stealware<br>
+B) Browser Hijacking<br>
+C) Adware<br>
+D) Keylogger<br>
+**E) Exploit**<br>
+
+#### 36. Aşağıda verilen kötü amaçlı yazılım türlerinden hangisi sistemdeki parayı veya veriyi çalmak amacıyla yazılmıştır?
+A) Exploit<br>
+**B) Stealware**<br>
+C) Rootkit<br>
+D) Adware<br>
+E) DOS virüsü<br>
+
+#### 37. Aşağıdakilerden hangisi robotun tanımında geçen özelliklerden biri *değildir*?
+a)Yazılım aracılığı ile yönetilir.<br>
+b)Yararlı amaç için iş ve değer üretir.<br>
+c)Bilgisayar algoritmaları ile yönetilir.<br>
+**D)Karada çalışmaya programlı makinelerdir.**<br>
+e)Mekanik sistemler ve bunlarla ilişkili kontrol ve algılama sistemleri bulunur.<br>
+
+#### 38. Aşağıdaki mühendislik dallarından hangisi robotik ile *ilgilenmez*?
+a)Uzay Mühendisliği<br>
+**B)İmalat Mühendisliği**<br>
+c)Mekatronik Mühendisliği<br>
+d)Makine Mühendisliği<br>
+e)Yazılım Mühendisliği<br>
+
+#### 39. Robotik hangi amaçlarda *kullanılmaz?*
+a)Ameliyatlarda<br>
+b)Hobi<br>
+c)İşlemci yapımında<br>
+d)Bomba imha etmek<br>
+**E)Çevre düzenleme**<br>
+
+#### 40. 1960’lı yılların sonlarında Hawaii universitesinin kurduğu ağın(Ilk kurulan ağ),günümüze kadar gelen en önemli özelligi nedir?
+
+A)TCP/IP teknigi<br>
+**B)CSMA/CD teknigi**<br>
+C)Kablosuz olması<br>
+D)Bus topolojisi<br>
+
+
+#### 41. Aşağıdakilerden hangisi Ağ yapılarından biri *değildir?*
+
+A)Halka<br>
+B)Örgü<br>
+**C)Yayın ağları**<br>
+D)Halka topolojisi<br>
+
+#### 42. İnternet haberleşmesinde hangi protokol kullanılır?
+
+<br>A)TCP/IP**<br>
+B)CSMA/CD<br>
+C)CSMA/CA<br>
+D)HTTP<br>
+
+#### 43. Aşağıdakilerden hangisi İnternet Arama Motorlarının çalışma yöntemlerinden biridir?
+A) Örümcekler ile çalışan arama motorları<br>
+B) İnsan iletileriyle çalışan arama motorları<br>
+C) Meta arama motorları<br>
+**D) Hepsi**<br>
+
+#### 44. Aşağıdakilerden hangisi bir internet arama motoru değildir?
+A)Google<br>
+B)Yahoo<br>
+**C)Facebook**<br>
+D)Hakia<br>
+
+
+#### 45. Aşağıdakilerden hangisi  internet arama motorlarının avantajları arasında *yer almaz?*
+A) Kompleks ve soyut anahtar kelimelerle aramak çok uygundur<br>
+B) Arama motoru internet üzerinde kullanıcı kontrolü sağlar<br>
+**C) Arama motorları zaman kaybına yol açar**<br>
+D) Aramaları belli alan, zaman ve bilgi kaynağı ile sınırlandırır<br>
+
+#### 46.Aşağıdakilerden hangisi Windows işletim sisteminin genel özellikleri arasındadır?
+ A)Görsel bir işletim sistemi olması<br>
+ B)Grafik tabanlı bir işletim sistemi olması<br>
+ C)Herhangi bir işlemin birden çok yöntemle yapılması<br>
+ D)Multitasking<br>
+ **E)Hepsi**<br>
+
+#### 47. Pardus işletim sistemiyle ilgili verilenlerden hangisi *yanlıştır?*
+A)Ücretsizdir.<br>
+B)Anadolu panteri anlamına gelir.<br>
+**C)Tasarı halindedir henüz kullanıma sunulmamıştır.**<br>
+D)TUBITAK tarafından geliştirilmiştir.<br>
+E)GNU/LUNIX dağıtımıdır.<br>
+
+#### 48. Aşağıdakilerden hangisi işletim sisteminin temel görevleri arasında yer almaz?
+A) Açılış testleri ve ayarlamalar,<br>
+B) Komut yorumlama ve yerine getirme<br>
+C) Bellek ve çevre araçların yönetimi<br>
+D)Disk ve dosya işlemleri,<br>
+**E)Sunum hazırlama**<br>
+
+#### 49. Aşağıdakilerden hangisi yüksek seviyeli dillerden biridir?
+**A.Pascal**<br>
+B.C++<br>
+C.C#<br>
+D.Paradox<br>
+E.Visual Basic<br>
+
+#### 50. Programlama dilleri çalıştıkları ortama göre kaça ayrılır?
+A.1<br>
+**B.2**<br>
+C.3<br>
+D.4<br>
+E.5<br>
+
+#### 51. Aşağıdakilerden hangisi nesneye yönelimli diller biridir?
+**A.Java**<br>
+B.ADA<br>
+C.Fortran<br>
+D.Acces<br>
+E.Visual Basic<br>
+
+#### 52.
+• Bulut Hizmetleri
+• Bulut Platformu
+• Bulut Alt  Yapısı
+ 
 Yukarıdaki bulut katmanlarından hangisinde veya hangilerinde Sanal Kaynaklar kullanılır?
-•	Yalnız I
-•	Yalnız II
-•	Yalnız III
-•	I ve II
-•	I ve III
-Soru 2.
-Aşağıdakilerden hangisi Bulut Bilişimin avantajlarından biri değildir?
-•	Hızlı internet bağlantısı gerektirmesi.
-•	Veri kaybını engellemesi.
-•	Hızlı güncelleme sağlaması.
-•	Yüksek depolama kapasitesine sahip olması.
-•	Düşük donanım maliyeti sağlaması.
-Soru 3.
-Aşağıdakilerden hangisi Bulut Bilişime gelinen süreçte kullanılan teknolojilerden biri değildir?
-•	Utility Computing
-•	Grid Computing
-•	Cluster Computing
-•	Super Computing
-•	Green Computing
-Soru 4.
-Aşağıdakilerden hangisi Bulut Bilişimin dezavantajlarından biri değildir?
-•	İnternet bağlantısı gerektirmesi.
-•	Sunucu Yoğunluğu.
-•	Ağır sistem güncellemeleri.
-•	Güvenlik açıkları.
-•	Veri kaybını engelleme.
+A) Yalnız I<br>
+B) Yalnız II<br>
+**C) Yalnız III**<br>
+D) I ve II<br>
+E) I ve III<br>
 
-1)Aşağıdakilerden hangisi barkod türü tarayıcı değildir?
-    A)Kalem tarayıcı
-    B)Kamera tabanlı okuyucu
-    C)CCD Tarayıcı
-    D)Sheet-fed tarayıcı  
-    E)Handheld tarayıcı
-  2)aşağıdaki tarayıcılardan hangisi photomultiplier tube teknolojisine sahiptir?
-   A)Handheld tarayıcı
-   B)Sheet-fed tarayıcı
-   C)Drum tarayıcı
-   D)Flatbed tarayıcı
-   E)SCSI tarayıcı
-3)CCD barkod tarayıcının kalem türü ve lazer barkod tarayıcılardan farkı nedir?
-A)Barkod etiketinden yansıyan ışığın parlaklığını ölçmesi
-B)Foto diyot bulundurması
-C)Işık kaynağından yansıyan ışığın şiddetini ölçmesi
-D)Lazerin geri yansımasını sağlayacak bir ayna düzeneğini bulundurması
-E)Tarayıcı tarafından üretilen belirli frekanstaki ışığı ölçmesi
+#### 53. Aşağıdakilerden hangisi Bulut Bilişimin avantajlarından *biri değildir?*
+**a) Hızlı internet bağlantısı gerektirmesi.**<br>
+b) Veri kaybını engellemesi.<br>
+c) Hızlı güncelleme sağlaması.<br>
+d) Yüksek depolama kapasitesine sahip olması.<br>
+e) Düşük donanım maliyeti sağlaması.<br>
 
-Soru 1)Modülasyon Nedir?
-A) Veri gönderen modem, sayısal veriyi telefon hattıyla uyumlu analog sinyallere dönüştürür, bu isleme modülasyon denir.
-B) Veri alan modem ise analog işaretleri tekrardan sayısal veriye çevirir bu işleme de modülasyon denir.
-C) MAFE devreleri içinde DAC (Digital analog çevirici) sistemlere denir.
-D) MAFE devreleri içinde ADC (Analog dijital çevirici) sistemlere denir.
-E) Mikro denetleyici birimidir
-Soru 2) Modemin temel bileşeni değildir?
-A)Dial-up
-B)UART
-C)DAC
-D)ADC
-E)DSP
-Soru 3) Full Duplex in özelliklerindendir?
-A)Modemler veri iletimini her iki yöne aynı anda yapabileceği anlamına gelir
-B)Veri iletişimi esnasında bir modem gönderir diğer modem alır. Aynı anda veri iletişimi yapılmaz.
-C) Aynı anda hem veri iıetişimi hem de karşı tarafla konuşma yapılabilir.
-D)Mikrofon firması tarafında geliştirilmiş hata kontrol protokolü Harici modemler Harici güç ünitesinden beslenirler
-E)Telefonlar bu iletişim üzerinden çalışmaz.
+#### 54. Aşağıdakilerden hangisi Bulut Bilişime gelinen süreçte kullanılan teknolojilerden biri *değildir?*
+a) Utility Computing<br>
+b) Grid Computing<br>
+c) Cluster Computing<br>
+d) Super Computing<br>
+**e) Green Computing**<br>
+
+#### 55. Aşağıdakilerden hangisi Bulut Bilişimin dezavantajlarından biri değildir?
+a) İnternet bağlantısı gerektirmesi.<br>
+b) Sunucu Yoğunluğu.<br>
+c) Ağır sistem güncellemeleri.<br>
+d) Güvenlik açıkları.<br>
+**e) Veri kaybını engelleme.**<br>
+
+#### 56. Aşağıdakilerden hangisi barkod türü tarayıcı değildir?
+    A)Kalem tarayıcı<br>
+    B)Kamera tabanlı okuyucu<br>
+    C)CCD Tarayıcı<br>
+    **D)Sheet-fed tarayıcı**<br> 
+    E)Handheld tarayıcı<br>
+
+#### 57. aşağıdaki tarayıcılardan hangisi photomultiplier tube teknolojisine sahiptir?
+   A)Handheld tarayıcı<br>
+   B)Sheet-fed tarayıcı<br>
+ **C)Drum tarayıcı**<br>
+   D)Flatbed tarayıcı<br>
+   E)SCSI tarayıcı<br>
+
+#### 58. CCD barkod tarayıcının kalem türü ve lazer barkod tarayıcılardan farkı nedir?
+**A)Barkod etiketinden yansıyan ışığın parlaklığını ölçmesi**<br>
+B)Foto diyot bulundurması<br>
+C)Işık kaynağından yansıyan ışığın şiddetini ölçmesi<br>
+D)Lazerin geri yansımasını sağlayacak bir ayna düzeneğini bulundurması<br>
+E)Tarayıcı tarafından üretilen belirli frekanstaki ışığı ölçmesi<br>
+
+#### 59. Modülasyon Nedir?
+**A) Veri gönderen modem, sayısal veriyi telefon hattıyla uyumlu analog sinyallere dönüştürür, bu isleme modülasyon denir.**<br>
+B) Veri alan modem ise analog işaretleri tekrardan sayısal veriye çevirir bu işleme de modülasyon denir.<br>
+C) MAFE devreleri içinde DAC (Digital analog çevirici) sistemlere denir.<br>
+D) MAFE devreleri içinde ADC (Analog dijital çevirici) sistemlere denir.<br>
+E) Mikro denetleyici birimidir<br>
+
+#### 60. Modemin temel bileşeni *değildir?*
+**A)Dial-up**<br>
+B)UART<br>
+C)DAC<br>
+D)ADC<br>
+E)DSP<br>
+
+#### 61. Full Duplex in özelliklerindendir?
+**A)Modemler veri iletimini her iki yöne aynı anda yapabileceği anlamına gelir**<br>
+B)Veri iletişimi esnasında bir modem gönderir diğer modem alır. Aynı anda veri iletişimi yapılmaz.<br>
+C) Aynı anda hem veri iıetişimi hem de karşı tarafla konuşma yapılabilir.<br>
+D)Mikrofon firması tarafında geliştirilmiş hata kontrol protokolü Harici modemler Harici güç ünitesinden beslenirler<br>
+E)Telefonlar bu iletişim üzerinden çalışmaz.<br>
+
+#### 62. Aşağıdakilerin hangisi güvenlik duvarlarının (Firewall) kullandığı metodlardan biridir?
+**A)Paket Filtrelemesi**<br>
+B)Sezgisel Tarama<br>
+C)Telnet<br>
+D)Pishing<br>
+E)P2P<br>
+
+#### 63. Aşağıdakilerden hangisi güvenlik duvarlarının (Firewall) filtreleme kurallarından biri *değildir?
+A)Ip Adresleri<br>
+B)Alan Adları<br>
+C)Portlar<br>
+**D)Yerel Alan Ağı**<br>
+E)Protokoller<br>
 
 
-Soru 1) Aşağıdakilerin hangisi güvenlik duvarlarının (Firewall) kullandığı metodlardan biridir?
-A)Paket Filtrelemesi
-B)Sezgisel Tarama
-C)Telnet
-D)Pishing
-E)P2P
-Soru 2) Aşağıdakilerden hangisi güvenlik duvarlarının (Firewall) filtreleme kurallarından biri değildir?
-A)Ip Adresleri
-B)Alan Adları
-C)Portlar
-D)Yerel Alan Ağı
-E)Protokoller
+#### 64. Aşağıdakilerden hangisi virüslere karşı alınabilecek önlemlerden biri *değildir?*
+A)Sanal makine kullanmak<br>
+B)Açılır pencere engelleyicisi kullanmak<br>
+**C)Sürücülerdeki otomatik çalıştırma özelliğini açmak**<br>
+D)Şüpheli web sitelerini ziyaret etmemek<br>
+E)Güvensiz e-postaları açmamak<br>
 
-Soru 3) Aşağıdakilerden hangisi virüslere karşı alınabilecek önlemlerden biri değildir?
-A)Sanal makine kullanmak
-B)Açılır pencere engelleyicisi kullanmak
-C)Sürücülerdeki otomatik çalıştırma özelliğini açmak
-D)Şüpheli web sitelerini ziyaret etmemek
-E)Güvensiz e-postaları açmamak
 
-Soru 1) 1943 yılında Enigmanın ürettiği şifreleri çözmek için hangi makine icat edilmiştir?
-a)   Jefferson Diski
-b)  Eniac
-c)   Hill
-d)  Vernam
-e)   Sezar
+#### 65. 1943 yılında Enigmanın ürettiği şifreleri çözmek için hangi makine icat edilmiştir?
+a)   Jefferson Diski<br>
+**b)  Eniac**<br>
+c)   Hill<br>
+d)  Vernam<br>
+e)   Sezar<br>
 
-Soru 2) Belgelerin şifrelenmesi ve şifresinin çözülmesi için kullanılan yöntemlere ne ad verilir?
-a)   Kriptoloji
-b)   Kriptoanaliz
-c)   Kriptografi
-d)   PKI
-e)   Stenografi
 
-Soru 3) Açık anahtar kriptografik sistemi ve sayısal imzalama yöntemi olarak kullanılan,  Çarpanlarına ayırma problemi üzerine inşa edilen algoritma aşağıdakilerden hangisidir?
-a)	Diffie-Hellman
-b)	RSA
-c)	DES
-d)	RC2
-e)	Eliptik Eğri
+#### 66 Belgelerin şifrelenmesi ve şifresinin çözülmesi için kullanılan yöntemlere ne ad verilir?
+a)   Kriptoloji<br>
+b)   Kriptoanaliz<br>
+**c)   Kriptografi**<br>
+d)   PKI<br>
+e)   Stenografi<br>
 
-1)Aşağıdakilerden hangisi bir oyun konsulu değildir?
-A-) Magnavox Odyssey
-B-) Sega Mega Drive
-C-)Playstation 2
-D-)XBOX 360
-E-)IPAD
 
-2)Aşağıdakilerden hangisi bir sanal gerçeklik gözlüğüdür?
-A-)Oculus Rift
-B-)Ray-Ban
-C-)Sony vaio
-D-)Sega Dreamcast
-E-)Microsoft Kinect
-3)Aşağıdakilerden hangisi First Person Shooter oyunudur?
-A-)FİFA
-B-)Call of Duty
-C-)League Of Legends
-D-)Mortal Kombat
-E-)Game Of Thrones
+#### 67. Açık anahtar kriptografik sistemi ve sayısal imzalama yöntemi olarak kullanılan,  Çarpanlarına ayırma problemi üzerine inşa edilen algoritma aşağıdakilerden hangisidir?
+a)	Diffie-Hellman<br>
+**b)	RSA**<br>
+c)	DES<br>
+d)	RC2<br>
+e)	Eliptik Eğri<br>
+
+#### 68. Aşağıdakilerden hangisi bir oyun konsulu değildir?
+A-) Magnavox Odyssey<br>
+B-) Sega Mega Drive<br>
+C-)Playstation 2<br>
+D-)XBOX 360<br>
+**E-)IPAD**<br>
+
+#### 69. Aşağıdakilerden hangisi bir sanal gerçeklik gözlüğüdür?
+**A-)Oculus Rift**<br>
+B-)Ray-Ban<br>
+C-)Sony vaio<br>
+D-)Sega Dreamcast<br>
+E-)Microsoft Kinect<br>
+
+####70. Aşağıdakilerden hangisi First Person Shooter oyunudur?
+A-)FİFA<br>
+**B-)Call of Duty**<br>
+C-)League Of Legends<br>
+D-)Mortal Kombat<br>
+E-)Game Of Thrones<br>
